--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,400i,800,900" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <!-- End Styles -->
-    <title>Adam's Random Quote Machine</title>
+    <title>Shit Trump Said : A Quote Generator</title>
   </head>
 <body>
 <div class="container">
@@ -20,13 +20,13 @@
     <h2 class="text-center title">Shit Trump Said</h2>
       <p class="lead text-center"><i class="fa fa-quote-left"></i> <span id="quote">I don't think Ivanka would do that, although she does have a very nice figure. I've said if Ivanka weren't my daughter, perhaps I'd be dating her.</span></p>
       <p></p>
-      <p class="text-right">- <span id="author">Donald Trump</span></p>
+      <p class="text-right quote-author">- <span id="author">Donald Trump</span></p>
       <div class="row">
       <div class="col-lg-12 button-row">
 
-        <a id="tweet-quote" title="Tweet this quote!" target="_blank" href="http://twitter.com/share?text=&quot;I've said if Ivanka weren't my daughter, perhaps I'd be dating her.&quot; - Donald Trump&hashtags=shittrumpsaid"><i class="fa fa-twitter-square fa-3x"></i></a>
+        <a class="button" id="tweet-quote" title="Tweet this quote!" target="_blank" href="http://twitter.com/share?text=&quot;I've said if Ivanka weren't my daughter, perhaps I'd be dating her.&quot; - Donald Trump&hashtags=shittrumpsaid"><i class="fa fa-twitter-square fa-3x"></i></a>
 
-        <a href="#"><button class="btn btn-default float-right quote-btn">New Quote</button></a>
+        <button class="btn btn-default float-right button quote-btn">New Quote</button>
       </div>
       </div>
 
@@ -42,6 +42,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
 
 <script src="scripts.js"></script>
 
